--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <div id="main-container"></div>
+    <div id = button-container>
+        <button id="reset-button">Click me to generate a new grid</button>
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
