Generate new grid button functioning

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
         <button id="reset-button">Click me to generate a new grid</button>
     </div>
     <script src="script.js"></script>
+    <script>initialiseFirstGrid()</script>
 </body>
 </html>
